[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Scripts/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheets/ship.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "left_bank",
"speed": 20.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "left_hold",
"speed": 20.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "left_return",
"speed": 20.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "right_bank",
"speed": 20.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "right_hold",
"speed": 20.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "right_return",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 12 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 8, 12 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 1, 1 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
fire_rate = 15

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="ItemHitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemHitbox"]
shape = SubResource( 25 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -5 )
collision_mask = 20
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 24 )

[node name="BulletSpawner" type="Position2D" parent="."]
position = Vector2( 0, -12 )

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="ItemHitbox" to="." method="_on_ItemHitbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_InvulTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
